# birdnoise

./: .gitignore  .uv.lock.swp  Folder_struc.txt  README.md  _.ipynb  pyproject.toml
Data/priors/: aldfly_abundance_27km_uint8_cog.json  ameavo_abundance_27km_uint8_cog.json  amebit_abundance_27km_uint8_cog.json  amecro_abundance_27km_uint8_cog.json  amegfi_abundance_27km_uint8_cog.json  amekes_abundance_27km_uint8_cog.json  amepip_abundance_27km_uint8_cog.json  amered_abundance_27km_uint8_cog.json  amerob_abundance_27km_uint8_cog.json  amewig_abundance_27km_uint8_cog.json  amewoo_abundance_27km_uint8_cog.json  amtspa_abundance_27km_uint8_cog.json  annhum_abundance_27km_uint8_cog.json  astfly_abundance_27km_uint8_cog.json  baisan_abundance_27km_uint8_cog.json  baleag_abundance_27km_uint8_cog.json  balori_abundance_27km_uint8_cog.json  banswa_abundance_27km_uint8_cog.json  barswa_abundance_27km_uint8_cog.json  bawwar_abundance_27km_uint8_cog.json  belkin1_abundance_27km_uint8_cog.json  belspa2_abundance_27km_uint8_cog.json  bewwre_abundance_27km_uint8_cog.json  bkbcuc_abundance_27km_uint8_cog.json  bkbmag1_abundance_27km_uint8_cog.json  (+239 more)
Models/: __init__.py  frozen_audio_encoder.py  hf_stage_b.py  prior_gating_network.py  stage_b_model.py
NatureLM-audio/: .pre-commit-config.yaml  README.md  beans_zero_dataset_config.json  beans_zero_inference.py  cli.py  inference_web_app.py  pyproject.toml  requirements.txt  train.py  train_dist.sh
NatureLM-audio/NatureLM/: augmentations.py  checkpoint_utils.py  config.py  dataset.py  dist_utils.py  infer.py  logger.py  optims.py  processors.py  runner.py  storage_utils.py  task_metric_utils.py  task_metrics.py  utils.py
NatureLM-audio/NatureLM/models/: NatureLM.py  Qformer.py  __init__.py  aves.py  utils.py
NatureLM-audio/NatureLM/models/beats/: BEATs.py  Tokenizers.py  backbone.py  modules.py  quantizer.py
NatureLM-audio/configs/: inference.yml  train_stage1.yml  train_stage2.yml
Notes/: 01-16-26-tables.md
Scripts/: check_beans_cbi.py  check_pasfly.py  check_raw_abundance.py  check_species_mismatch.py  debug_all_species_prior.py  debug_normalization.py  debug_prior_raw_values.py  download_birdset.py  eBirdPrior.py  eval_beans_per_dataset.py  eval_cbi.sh  eval_results.pth  evaluate_models.py  evaluate_models_fast.py  evaluate_models_ii.py  package_for_reproduction.py  package_with_priors_cache.py  plan_season_grouping.md  precompute_priors.py  prior_austin_check.py  profile_training.py  quick_test_cache.py  save_priors_recovery.py  test_austin_amecro.py  test_cache_entropy_quick.py  test_feature_independence.py  test_prior_normalization.py  test_raw_abundance_cache.py  train_beans_benchmark.py  train_lc.py  train_weighted_fusion.py  train_wf_exp.py  train_wf_stage_c.py  train_wf_stage_d.py  train_wf_stage_d_pii_enc.py  w_sweep.py
(+62 files in other folders)
