[project]
name = "NatureLM-audio"
version = "1.0.1"
description = "NatureLM-audio: an Audio-Language Foundation Model for Bioacoustics"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "torch>=2.2.2", # 📌
  "torchaudio>=2.2.2",
  "torchvision>=0.17.2",
  "transformers[sentencepiece]>=4.44.2",
  "datasets>=2.20.0",
  "cloudpathlib[gs]>=0.20.0",
  "einops>=0.8.0",
  "gradio>=5.10.0",
  "google-cloud-aiplatform>=1.76.0",
  "Levenshtein>=0.25.1",
  "librosa>=0.9.2",
  "memoization>=0.4.0",
  "mir-eval>=0.7",
  "numpy>=1.26.4",
  "pandas>=1.4.3",
  "peft>=0.11.1",
  "plumbum>=1.7.2",
  "pydantic-settings>=2.7.1",
  "pydantic>=2.7.4",
  "pydub>=0.25.1",
  "pyyaml>=6.0",
  "resampy>=0.3.1",
  "scipy>=1.14.0",
  "soundfile>=0.12.1",
  "tensorboard>=2.18.0",
  "tensorboardX>=2.6.2.2",
  "tqdm>=4.66.4",
  "wandb>=0.17.3",
  "click>=8.1.7",
  "beans-zero",
]

[project.urls]
Homepage = "https://earthspecies.github.io/naturelm-audio-demo/"
Repository = "https://github.com/earthspecies/NatureLM-audio"

[dependency-groups]
gpu = [
  "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.5.2/flash_attn-2.5.2+cu118torch2.2cxx11abiFALSE-cp310-cp310-linux_x86_64.whl",
  "bitsandbytes>=0.43.1",
]
dev = [
  "pre-commit>=4.0.1",
  "pytest>=7.1.2",
  "ruff>=0.8.1",
  "matplotlib>=3.9.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["NatureLM"]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
naturelm = "cli:naturelm"
beans = "cli:beans_zero"

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "platform_system == 'Darwin'" },
  { index = "pytorch-cu118", marker = "platform_system == 'Linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "platform_system == 'Darwin'" },
  { index = "pytorch-cu118", marker = "platform_system == 'Linux'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "platform_system == 'Darwin'" },
  { index = "pytorch-cu118", marker = "platform_system == 'Linux'" },
]
beans-zero = { git = "https://git@github.com/earthspecies/beans-zero.git" }

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or McCabe
# complexity (`C901`) by default.
select = [
  "E4",
  "E7",
  "E9",
  "F", # Flake8
  "I", # isort
]
